--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.8",
+    "@angular/cdk": "^18.2.12",
     "@angular/common": "^18.2.8",
     "@angular/compiler": "^18.2.8",
     "@angular/core": "^18.2.8",
     "@angular/forms": "^18.2.8",
     "@angular/google-maps": "^18.2.12",
+    "@angular/material": "^18.2.12",
     "@angular/platform-browser": "^18.2.8",
     "@angular/platform-browser-dynamic": "^18.2.8",
     "@angular/platform-server": "^18.2.8",
